--- a/client/blazorecommerce/package.json
+++ b/client/blazorecommerce/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.2",
+    "@radix-ui/themes": "^1.1.2",
+    "@trendmicro/react-sidenav": "^0.5.0",
+    "axios": "^1.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-pro-sidebar": "1.1.0-alpha.1",
     "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
