--- a/client/blazorecommerce/package.json
+++ b/client/blazorecommerce/package.json
@@ -5,12 +5,14 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "tailwind": "pnpx tailwindcss -i ./src/assets/styles/tailwind.input.css -o ./src/assets/styles/tailwind.output.css --watch",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.2",
+    "@radix-ui/react-form": "^0.0.3",
     "@radix-ui/themes": "^1.1.2",
     "@trendmicro/react-sidenav": "^0.5.0",
     "axios": "^1.5.0",
@@ -18,7 +20,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-pro-sidebar": "1.1.0-alpha.1",
-    "react-router-dom": "^6.15.0"
+    "react-router-dom": "^6.15.0",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -29,6 +32,7 @@
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
