--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,10 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@types/bcryptjs": "^2.4.3",
         "@types/cors": "^2.8.14",
         "@types/express": "^4.17.17",
+        "@types/jsonwebtoken": "^9.0.2",
         "@types/morgan": "^1.9.5",
         "@types/node": "^20.6.0",
         "morgan": "^1.10.0",
