--- a/client/blazorecommerce/package.json
+++ b/client/blazorecommerce/package.json
@@ -12,16 +12,15 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.2",
-    "@radix-ui/react-form": "^0.0.3",
-    "@radix-ui/themes": "^1.1.2",
     "@trendmicro/react-sidenav": "^0.5.0",
     "axios": "^1.5.0",
+    "flowbite-react": "^0.6.0",
+    "primereact": "^9.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-pro-sidebar": "1.1.0-alpha.1",
-    "react-router-dom": "^6.15.0",
-    "react-toastify": "^9.1.3"
+    "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
