--- a/client/blazorecommerce/package.json
+++ b/client/blazorecommerce/package.json
@@ -17,6 +17,7 @@
     "flowbite-react": "^0.6.0",
     "primereact": "^9.6.2",
     "react": "^18.2.0",
+    "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-pro-sidebar": "1.1.0-alpha.1",
